test/libsolidity/syntaxTests/errors/error_address_payable.sol
error E(address payable x);
// ----
